@@ -24,7 +24,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Add a warning for non-descriptive filenames at Special:Upload
 * Add {{filepath:}} parser function to get full path to an uploaded file,
   complementing {{fullurl:}} for pages.
-
+* (bug 11136) If using Postgres, search path is explicitly set if wgDBmwschema is 
+  not set to 'mediawiki', allowing multiple mediawiki instances per user.
 
 === Bug fixes in 1.12 ===
 
